syntax = "proto3";

package types;

message Felt {
  bytes value = 1;
}

message BlockID {
  oneof identifier {
    uint64 number = 1 [json_name = "block_number"];
    Felt hash = 2 [json_name = "block_hash"];
    string tag = 3 [json_name = "block_tag"];
  }
}

enum SimulationFlag {
  SKIP_FEE_CHARGE = 0;
  SKIP_EXECUTE = 1;
  SKIP_VALIDATE = 2;
}

message Transaction {
  oneof transaction {
    InvokeTxnV1 invoke_v1 = 1;
    InvokeTxnV3 invoke_v3 = 2;
    DeclareTxnV1 declare_v1 = 3;
    DeclareTxnV2 declare_v2 = 4;
    DeclareTxnV3 declare_v3 = 5;
    DeployAccountTxn deploy_account = 6;
    DeployAccountTxnV3 deploy_account_v3 = 7;
  }
}

message InvokeTxnV1 {
  Felt max_fee = 1 [json_name = "max_fee"];
  string version = 2 [json_name = "version"];
  repeated Felt signature = 3 [json_name = "signature"];
  Felt nonce = 4 [json_name = "nonce"];
  string type = 5 [json_name = "type"];
  Felt sender_address = 6 [json_name = "sender_address"];
  repeated Felt calldata = 7 [json_name = "calldata"];
}

message InvokeTxnV3 {
  string type = 1 [json_name = "type"];
  Felt sender_address = 2 [json_name = "sender_address"];
  repeated Felt calldata = 3 [json_name = "calldata"];
  string version = 4 [json_name = "version"];
  repeated Felt signature = 5 [json_name = "signature"];
  Felt nonce = 6 [json_name = "nonce"];
  ResourceBoundsMapping resource_bounds = 7 [json_name = "resource_bounds"];
  Felt tip = 8 [json_name = "tip"];
  repeated Felt paymaster_data = 9 [json_name = "paymaster_data"];
  repeated Felt account_deployment_data = 10 [json_name = "account_deployment_data"];
  string nonce_data_availability_mode = 11 [json_name = "nonce_data_availability_mode"];
  string fee_data_availability_mode = 12 [json_name = "fee_data_availability_mode"];
}

message DeclareTxnV1 {
  Felt max_fee = 1 [json_name = "max_fee"];
  string version = 2 [json_name = "version"];
  repeated Felt signature = 3 [json_name = "signature"];
  Felt nonce = 4 [json_name = "nonce"];
  string type = 5 [json_name = "type"];
  Felt class_hash = 6 [json_name = "class_hash"];
  Felt sender_address = 7 [json_name = "sender_address"];
}

message DeclareTxnV2 {
  string type = 1 [json_name = "type"];
  Felt sender_address = 2 [json_name = "sender_address"];
  Felt compiled_class_hash = 3 [json_name = "compiled_class_hash"];
  Felt max_fee = 4 [json_name = "max_fee"];
  string version = 5 [json_name = "version"];
  repeated Felt signature = 6 [json_name = "signature"];
  Felt nonce = 7 [json_name = "nonce"];
  bytes class = 8 [json_name = "contract_class"];
}

message DeclareTxnV3 {
  string type = 1 [json_name = "type"];
  Felt sender_address = 2 [json_name = "sender_address"];
  Felt compiled_class_hash = 3 [json_name = "compiled_class_hash"];
  string version = 4 [json_name = "version"];
  repeated Felt signature = 5 [json_name = "signature"];
  Felt nonce = 6 [json_name = "nonce"];
  Felt class_hash = 7 [json_name = "class_hash"];
  ResourceBoundsMapping resource_bounds = 8 [json_name = "resource_bounds"];
  Felt tip = 9 [json_name = "tip"];
  repeated Felt paymaster_data = 10 [json_name = "paymaster_data"];
  repeated Felt account_deployment_data = 11 [json_name = "account_deployment_data"];
  string nonce_data_availability_mode = 12 [json_name = "nonce_data_availability_mode"];
  string fee_data_availability_mode = 13 [json_name = "fee_data_availability_mode"];
}

message DeployAccountTxn {
  Felt max_fee = 1 [json_name = "max_fee"];
  string version = 2 [json_name = "version"];
  repeated Felt signature = 3 [json_name = "signature"];
  Felt nonce = 4 [json_name = "nonce"];
  string type = 5 [json_name = "type"];
  Felt class_hash = 6 [json_name = "class_hash"];
  Felt contract_address_salt = 7 [json_name = "contract_address_salt"];
  repeated Felt constructor_calldata = 8 [json_name = "constructor_calldata"];
}

message DeployAccountTxnV3 {
  string type = 1 [json_name = "type"];
  string version = 2 [json_name = "version"];
  repeated Felt signature = 3 [json_name = "signature"];
  Felt nonce = 4 [json_name = "nonce"];
  Felt contract_address_salt = 5 [json_name = "contract_address_salt"];
  repeated Felt constructor_calldata = 6 [json_name = "constructor_calldata"];
  Felt class_hash = 7 [json_name = "class_hash"];
  ResourceBoundsMapping resource_bounds = 8 [json_name = "resource_bounds"];
  Felt tip = 9 [json_name = "tip"];
  repeated Felt paymaster_data = 10 [json_name = "paymaster_data"];
  string nonce_data_availability_mode = 11 [json_name = "nonce_data_availability_mode"];
  string fee_data_availability_mode = 12 [json_name = "fee_data_availability_mode"];
}

message ResourceBoundsMapping {
  ResourceBounds l1_gas = 1 [json_name = "L1_GAS"];
  ResourceBounds l2_gas = 2 [json_name = "L2_GAS"];
}

message ResourceBounds {
  Felt max_amount = 1 [json_name = "max_amount"];
  Felt max_price_per_unit = 2 [json_name = "max_price_per_unit"];
}

message FeeEstimate {
  Felt gas_consumed = 1 [json_name = "gas_consumed"];
  Felt gas_price = 2 [json_name = "gas_price"];
  Felt data_gas_consumed = 3 [json_name = "data_gas_consumed"];
  Felt data_gas_price = 4 [json_name = "data_gas_price"];
  Felt overall_fee = 5 [json_name = "overall_fee"];
  string unit = 6 [json_name = "unit"];
}

message BlockWithTxHashes {
    string status = 1;
    BlockHeader header = 2;
    repeated Felt transactions = 3;
}

message BlockWithTxs {
    string status = 1;
    BlockHeader header = 2;
    repeated Transaction transactions = 3;
}

message BlockWithReceipts {
    string status = 1;
    BlockHeader header = 2;
    repeated TransactionWithReceipt transactions = 3;
}

message PendingBlockWithTxHashes {
    BlockHeader header = 1;
    repeated Felt transactions = 2;
}

message PendingBlockWithTxs {
    BlockHeader header = 1;
    repeated Transaction transactions = 2;
}

message PendingBlockWithReceipts {
    BlockHeader header = 1;
    repeated TransactionWithReceipt transactions = 2;
}

message StateUpdate {
    Felt block_hash = 1;
    Felt old_root = 2;
    Felt new_root = 3;
    StateDiff state_diff = 4;
}

message PendingStateUpdate {
    Felt old_root = 1;
    StateDiff state_diff = 2;
}

message StateDiff {
    repeated StorageDiff storage_diffs = 1;
    repeated Felt deprecated_declared_classes = 2;
    repeated DeclaredClass declared_classes = 3;
    repeated DeployedContract deployed_contracts = 4;
    repeated ReplacedClass replaced_classes = 5;
    repeated Nonce nonces = 6;
}

message StorageDiff {
    Felt address = 1;
    repeated StorageEntry storage_entries = 2;
}

message StorageEntry {
    Felt key = 1;
    Felt value = 2;
}

message DeclaredClass {
    Felt class_hash = 1;
    Felt compiled_class_hash = 2;
}

message DeployedContract {
    Felt address = 1;
    Felt class_hash = 2;
}

message ReplacedClass {
    Felt contract_address = 1;
    Felt class_hash = 2;
}

message Nonce {
    Felt contract_address = 1;
    Felt nonce = 2;
}

message BlockHeader {
    Felt block_hash = 1;
    Felt parent_hash = 2;
    uint64 block_number = 3;
    Felt new_root = 4;
    uint64 timestamp = 5;
    Felt sequencer_address = 6;
    ResourcePrice l1_gas_price = 7;
    ResourcePrice l1_data_gas_price = 8;
    string l1_da_mode = 9;
    string starknet_version = 10;
}

message ResourcePrice {
    Felt price_in_wei = 1;
    Felt price_in_fri = 2;
}

message TransactionWithReceipt {
    Transaction transaction = 1;
    TransactionReceipt receipt = 2;
}

message TransactionReceipt {
    string type = 1;
    Felt transaction_hash = 2;
    FeePayment actual_fee = 3;
    string finality_status = 4;
    repeated MessageToL1 messages_sent = 5;
    repeated Event events = 6;
    ExecutionResources execution_resources = 7;
    string execution_status = 8;
    string revert_reason = 9;
}

message FeePayment {
    Felt amount = 1;
    string unit = 2;
}

message MessageToL1 {
    Felt from_address = 1;
    Felt to_address = 2;
    repeated Felt payload = 3;
}

message Event {
    Felt from_address = 1;
    repeated Felt keys = 2;
    repeated Felt data = 3;
}

message ExecutionResources {
    uint64 steps = 1;
    uint64 memory_holes = 2;
    uint64 range_check_builtin_applications = 3;
    uint64 pedersen_builtin_applications = 4;
    uint64 poseidon_builtin_applications = 5;
    uint64 ec_op_builtin_applications = 6;
    uint64 ecdsa_builtin_applications = 7;
    uint64 bitwise_builtin_applications = 8;
    uint64 keccak_builtin_applications = 9;
    uint64 segment_arena_builtin = 10;
    DataAvailability data_availability = 11;
}

message DataAvailability {
    uint64 l1_gas = 1;
    uint64 l1_data_gas = 2;
}

message FunctionCall {
    Felt contract_address = 1;
    Felt entry_point_selector = 2;
    repeated Felt calldata = 3;
}

message MessageFromL1 {
    string from_address = 1;
    Felt to_address = 2;
    Felt entry_point_selector = 3;
    repeated Felt payload = 4;
}

message EmittedEvent {
    Event event = 1;
    Felt block_hash = 2;
    uint64 block_number = 3;
    Felt transaction_hash = 4;
}

message EventFilter {
    BlockID from_block = 1;
    BlockID to_block = 2;
    Felt address = 3;
    repeated Felt keys = 4;
}

message SyncStatus {
    Felt starting_block_hash = 1;
    uint64 starting_block_num = 2;
    Felt current_block_hash = 3;
    uint64 current_block_num = 4;
    Felt highest_block_hash = 5;
    uint64 highest_block_num = 6;
}

message ContractClass {
    repeated Felt sierra_program = 1;
    string contract_class_version = 2;
    EntryPointsByType entry_points_by_type = 3;
    string abi = 4;
}

message DeprecatedContractClass {
    string program = 1;
    DeprecatedEntryPointsByType entry_points_by_type = 2;
    string abi = 3;
}

message EntryPointsByType {
    repeated SierraEntryPoint constructor = 1;
    repeated SierraEntryPoint external = 2;
    repeated SierraEntryPoint l1_handler = 3;
}

message DeprecatedEntryPointsByType {
    repeated DeprecatedCairoEntryPoint constructor = 1;
    repeated DeprecatedCairoEntryPoint external = 2;
    repeated DeprecatedCairoEntryPoint l1_handler = 3;
}

message SierraEntryPoint {
    Felt selector = 1;
    uint64 function_idx = 2;
}

message DeprecatedCairoEntryPoint {
    string offset = 1;
    Felt selector = 2;
}
